--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
           <div class="input-group nl-input">
             <input
-              type="text"
+              type="email"
               class="form-control"
               placeholder="Enter Email..."
             />
