--- a/index.html
+++ b/index.html
@@ -405,14 +405,14 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="https://randomuser.me/api/portraits/men/25.jpg"
+                  src="./img/jimmy.jpg"
                   alt=""
-                  class="rounded-circle mb-3"
+                  class="rounded-circle mb-3 img-fluid jimmy-pic"
                 />
-                <h3 class="card-title mb-3">Jantje Smit</h3>
+                <h3 class="card-title mb-3">Jimmy Sulman</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
-                  perspiciatis ducimus illo iure, nulla itaque.
+                  Jimmy is a cat and obviously doesn't know anything about web
+                  development, but he's just happy to be here.
                 </p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
