footer fixed and contact info line breaks

--- a/index.html
+++ b/index.html
@@ -472,21 +472,23 @@
             <h2 class="text-center mb-4">Contact Information</h2>
             <ul class="list-group list-group-flush lead">
               <li class="list-group-item">
-                <span class="fw-bold">Main Location:</span> 50 Main st Boston MA
+                <span class="fw-bold">Main Location:</span><br />50 Main st
+                Boston MA
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555
+                <span class="fw-bold">Enrollment Phone:</span><br />(555)
+                555-5555
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Student Phone:</span> (333) 333-3333
+                <span class="fw-bold">Student Phone:</span><br />(333) 333-3333
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Enrollment Email:</span>
-                enroll@frontendbc.test
+                <span class="fw-bold">Enrollment Email:</span
+                ><br />enroll@frontendbc.test
               </li>
               <li class="list-group-item">
-                <span class="fw-bold">Student Email:</span>
-                student@frontendbc.test
+                <span class="fw-bold">Student Email:</span
+                ><br />student@frontendbc.test
               </li>
             </ul>
           </div>
@@ -499,8 +501,8 @@
     </section>
     <!-- footer -->
     <footer class="bg-dark p-5 text-center text-light position-relative">
-      <p class="lead w-75 w-md-100">Copyright &copy; 2021 Frontend Bootcamp</p>
-      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+      <p class="lead m-0">Copyright &copy; 2021 Frontend Bootcamp</p>
+      <a href="#" class="position-absolute bottom-0 end-0 py-5 pe-4">
         <i class="bi bi-arrow-up-circle h1"></i>
       </a>
     </footer>
