--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="#" class="navbar-brand">Frontend Bootcamp</a>
+        <a href="#" class="navbar-brand"
+          ><i class="bi bi-code-slash h3"></i> Frontend Bootcamp</a
+        >
         <button
           class="navbar-toggler"
           type="button"
